--- a/cart.html
+++ b/cart.html
@@ -53,7 +53,7 @@
             <td>Subtotal</td>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="cartTable">
           <tr>
             <td>
               <a href="#"><i class="far fa-times-circle"></i></a>
@@ -72,18 +72,6 @@
             </td>
             <td>
               <img src="img/products/f2.jpg" alt="" />
-            </td>
-            <td>Cartoon Astronaut T-Shirts</td>
-            <td>$118.19</td>
-            <td><input type="number" value="1" /></td>
-            <td>$118.19</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="#"><i class="far fa-times-circle"></i></a>
-            </td>
-            <td>
-              <img src="img/products/f3.jpg" alt="" />
             </td>
             <td>Cartoon Astronaut T-Shirts</td>
             <td>$118.19</td>
