--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2>Featured Products</h2>
       <p>Summer Collection New Modern Design</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" id="115">
           <img src="img/products/f1.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -86,9 +86,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="116">
           <img src="img/products/f2.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -102,9 +102,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="117">
           <img src="img/products/f3.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -118,9 +118,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="118">
           <img src="img/products/f4.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -134,9 +134,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="119">
           <img src="img/products/f5.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -150,9 +150,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="120">
           <img src="img/products/f6.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -166,9 +166,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="121">
           <img src="img/products/f7.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -182,9 +182,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="122">
           <img src="img/products/f8.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -198,7 +198,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
       </div>
     </section>
@@ -213,7 +213,7 @@
       <h2>New Arrivals</h2>
       <p>Summer Collection New Modern Design</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" id="123">
           <img src="img/products/n1.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -227,9 +227,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="124">
           <img src="img/products/n2.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -243,9 +243,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="125">
           <img src="img/products/n3.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -259,9 +259,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="126">
           <img src="img/products/n4.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -275,9 +275,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="127">
           <img src="img/products/n5.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -291,9 +291,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="128">
           <img src="img/products/n6.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -307,9 +307,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="129">
           <img src="img/products/n7.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -323,9 +323,9 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" id="130">
           <img src="img/products/n8.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -339,7 +339,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
       </div>
     </section>
