--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f2.jpg" alt="" />
@@ -71,7 +71,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f3.jpg" alt="" />
@@ -87,7 +87,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f4.jpg" alt="" />
@@ -103,7 +103,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f5.jpg" alt="" />
@@ -119,7 +119,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f6.jpg" alt="" />
@@ -135,7 +135,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f7.jpg" alt="" />
@@ -151,7 +151,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f8.jpg" alt="" />
@@ -167,7 +167,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
 
         <div class="pro" onclick="window.location.href='sproduct.html';">
@@ -184,7 +184,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n2.jpg" alt="" />
@@ -200,7 +200,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n3.jpg" alt="" />
@@ -216,7 +216,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n4.jpg" alt="" />
@@ -232,7 +232,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n5.jpg" alt="" />
@@ -248,7 +248,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n6.jpg" alt="" />
@@ -264,7 +264,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n7.jpg" alt="" />
@@ -280,7 +280,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/n8.jpg" alt="" />
@@ -296,7 +296,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i>🛒</i></a>
+          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
         </div>
       </div>
     </section>
