--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="116">
           <img src="img/products/f2.jpg" alt="" />
@@ -102,7 +102,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="117">
           <img src="img/products/f3.jpg" alt="" />
@@ -118,7 +118,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="118">
           <img src="img/products/f4.jpg" alt="" />
@@ -134,7 +134,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="119">
           <img src="img/products/f5.jpg" alt="" />
@@ -150,7 +150,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="120">
           <img src="img/products/f6.jpg" alt="" />
@@ -166,7 +166,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="121">
           <img src="img/products/f7.jpg" alt="" />
@@ -182,7 +182,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="122">
           <img src="img/products/f8.jpg" alt="" />
@@ -198,7 +198,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
       </div>
     </section>
@@ -227,7 +227,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="124">
           <img src="img/products/n2.jpg" alt="" />
@@ -243,7 +243,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="125">
           <img src="img/products/n3.jpg" alt="" />
@@ -259,7 +259,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="126">
           <img src="img/products/n4.jpg" alt="" />
@@ -275,7 +275,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="127">
           <img src="img/products/n5.jpg" alt="" />
@@ -291,7 +291,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="128">
           <img src="img/products/n6.jpg" alt="" />
@@ -307,7 +307,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="129">
           <img src="img/products/n7.jpg" alt="" />
@@ -323,7 +323,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
         <div class="pro" id="130">
           <img src="img/products/n8.jpg" alt="" />
@@ -339,7 +339,7 @@
             </div>
             <h4>$78</h4>
           </div>
-          <a href="#"><i class="far fa-shopping-cart cart"></i></a>
+          <a href="sproduct.html"><i class="far fa-shopping-cart cart"></i></a>
         </div>
       </div>
     </section>
