--- a/cart.html
+++ b/cart.html
@@ -42,7 +42,7 @@
     </section>
 
     <section id="cart" class="section-p1">
-      <table width="100%">
+      <table width="100%" id="table">
         <thead>
           <tr>
             <td>Remove</td>
