--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section id="banner" class="section-m1">
       <h4>Repair Service</h4>
       <h2>Up to <span>70% Off</span> - All t-Shirts & Accessories</h2>
-      <button class="normal">Explor More</button>
+      <button class="normal">Explore More</button>
     </section>
 
     <section id="product1" class="section-p1">
